# openscans

./: .console-filters.md  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PHASE2_VERIFICATION.md  PHASE4A_VERIFICATION.md  PHASE4_COMPLETE.md  README.md  TESTING.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml  (+1 more)
audit-reports/: 2026-06-24-security-audit.md
docs/: API.md  CODE_SIGNING.md  DEPLOYMENT.md  PERFORMANCE_AUDIT.md  PERFORMANCE_SUMMARY.md  PRD.md  PRODUCTION_CHECKLIST.md  RELEASE.md  architecture.md  competitor-analysis.md  security-audit-checklist.md
e2e/: dicom-viewer.spec.ts  measure-tools.spec.ts
plans/: FEATURE_BACKLOG.md  LLM_VISION_API.md  LOCAL_AI_PROVIDER.md  MR_SEGMENTATION_ENGINE.md  PYTHON_ML_INTEGRATION.md  STATUS.md
public/: cornerstoneWADOImageLoaderWebWorker.js
python-backend/: .gitignore  README.md  config.py  inference.py  main.py  model_manager.py  requirements.txt  setup.bat  setup.sh  test_api.py
python-engine/: .gitignore
scripts/: build-llama-server.sh  clean.js  copy-workers.js  download-llama-server.sh  e2e-local-ai.mjs  e2e-mr-seg.mjs  gen-compare-fixtures.mjs  run-e2e-local-ai.sh  security-audit.sh
src/: App.tsx  index.css  main.tsx  polyfills.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: LLAMA_CPP_VERSION
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_server.rs  lib.rs  local_ai.rs  mr_seg.rs  theme.rs
(+268 files in other folders)
